# swiss-it-jobs-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: build_public_stats.yml
analytics_output/: crosstab_role_category_vs_seniority.csv  crosstab_role_category_vs_work_mode.csv  distribution_canton.csv  distribution_city.csv  distribution_role_category.csv  distribution_seniority.csv  distribution_work_mode.csv  overview_metrics.csv  skill_cooccurrence_pairs.csv  top_skills_by_city.csv  top_skills_by_role_category.csv  top_skills_overall.csv
data/private_snapshots/: README.md  sample_public_stats_dataset.csv
jobs_ch/: __init__.py  analytics.py  archive.py  client.py  detail.py  extractors.py  main.py  models.py  popular_words.py  service.py  state.py  stopwords_custom.txt  word_categories_example.json
jobs_ch/tests/: test_jobs_ch_analytics.py  test_jobs_ch_service.py
local/docs/: LOCAL_APP.md  README.de.md  README.fr.md  README.it.md  (+1 more)
market_analytics/: __init__.py  analytics.py  constants.py  deduplication.py  io.py  public_snapshots.py  reporting.py  skills.py
public_stats/: README.md
scripts/: build_public_stats.py  export_analytics.py  export_dedup_report.py
site/: README.md  index.html  package-lock.json  package.json  vite.config.js
swiss_jobs/: __init__.py  registry.py
tests/: test_build_public_stats.py  test_database_salary.py  test_llm_vacancy_analysis.py  test_local_search_web.py  test_market_analytics.py  test_request_throttle.py  test_search_vacancies.py  test_swiss_jobs_structure.py
(+152 files in other folders)
