[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-it-jobs-analytics"
version = "0.1.0"
description = "Analytics utilities for processed Swiss IT job vacancy datasets."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dashboard = [
  "streamlit>=1.34.0",
]

[tool.setuptools]
packages = ["jobs_ch", "market_analytics"]
