[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-it-jobs-analytics"
version = "0.1.0"
description = "Analytics utilities for processed Swiss IT job vacancy datasets."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "pdfplumber>=0.11.0",
  "pyarrow>=15.0.0",
  "playwright>=1.50.0",
  "reportlab>=4.2.0",
  "requests>=2.31.0",
  "scrapling>=0.4.6",
]

[tool.setuptools.packages.find]
include = ["market_analytics*", "swiss_jobs*"]

[tool.setuptools.package-data]
"swiss_jobs.cli" = ["*.html", "assets/*.css", "assets/*.js"]
